--- a/example/package.json
+++ b/example/package.json
@@ -25,9 +25,9 @@
     "eslint-config-next": "^13.5.3",
     "eslint-config-prettier": "^8.8.0",
     "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.3",
-    "typescript": "5.2.2",
     "prettier": "^2.8.8",
-    "prettier-plugin-tailwindcss": "^0.3.0"
+    "prettier-plugin-tailwindcss": "^0.3.0",
+    "tailwindcss": "^3.3.3",
+    "typescript": "5.2.2"
   }
 }
