--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "1.0.0",
   "description": "A package that provides shared state management between Server and Client components in Next.JS v13 app router",
   "type": "module",
-  "main": "dist/index.js",
   "source": "src/index.ts",
-  "module": "dist/index.modern.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "types": "dist/types/index.d.ts",
   "files": [
     "dist"
   ],
   "scripts": {
-    "build": "microbundle --jsx React.createElement --jsxFragment React.Fragment --jsxImportSource react --no-sourcemap --format esm,cjs,modern",
-    "start": "microbundle watch",
+    "build": "rm -rf dist && tsc",
+    "build:watch": "tsc -w",
     "lint": "eslint src/**/*.ts src/**/*.tsx",
     "lint:fix": "eslint --fix src/**/*.ts src/**/*.tsx",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -30,6 +30,10 @@
     "email": "majid@sweetscript.com",
     "url": "sweetscript.com"
   },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/",
+    "access": "public"
+  },
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -43,15 +47,15 @@
     "node": "^12.20.0 || ^14.13.1 || >=16.0.0"
   },
   "devDependencies": {
+    "@types/node": "^20.8.2",
     "@types/react": "^18.2.22",
+    "@types/react-dom": "^18.2.8",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
     "eslint": "^8.34.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "microbundle": "^0.15.1",
     "prettier": "^2.8.4",
-    "rollup-plugin-preserve-directives": "^0.2.0",
     "typescript": "^4.9.5"
   },
   "peerDependencies": {
