--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,23 @@
 {
   "compilerOptions": {
-    "outDir": "dist",
-    "target": "esnext",
+    "allowJs": false,
+    "allowSyntheticDefaultImports": true,
+    "declaration": true,
+    "declarationDir": "dist/types",
+    "esModuleInterop": true,
+    "outDir": "./dist",
+    "jsx": "react",
+    "lib": ["es6", "dom", "es2016", "es2017"],
     "module": "esnext",
     "moduleResolution": "node",
-    "lib": ["dom", "esnext"],
-    "jsx": "react",
-    "sourceMap": false,
-    "declaration": true,
-    "esModuleInterop": false,
-    "noImplicitReturns": true,
-    "noImplicitThis": true,
-    "noImplicitAny": true,
-    "strictNullChecks": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "allowSyntheticDefaultImports": true
+    "resolveJsonModule": true,
+    "rootDir": "./src",
+    "sourceMap": true,
+    "strict": true,
+    "target": "es5",
+    "types": ["node"],
+    "noEmit": false
   },
-  "include": ["./src"],
+  "include": ["./src/**/*"],
   "exclude": ["node_modules", "dist"]
 }
