--- a/example/package.json
+++ b/example/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "next": "13.5.3",
+    "next-server-state": "^1.0.0",
     "prism-react-renderer": "^2.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
