--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,8 @@
     "esModuleInterop": true,
     "outDir": "./dist",
     "jsx": "react",
-    "lib": ["es6", "dom", "es2016", "es2017"],
-    "module": "esnext",
+    "lib": ["ESNext", "dom", "es2016", "es2017"],
+    "module": "ESNext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "rootDir": "./src",
